--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Joarley Moraes
+name: Alex Barros
 
 # Short bio or description (displayed in the header)
-description: Python Developer | Serverless | AWS 
+description: Computer Engineer | Interested in Cloud
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/joarleymoraes/joarleymoraes.github.io/master/images/joarley.jpeg
@@ -21,27 +21,27 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: joarleymoraes
-  instagram:
+  github: ealexbarros
+  instagram:ealexbarros
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: joarleymoraes
-  stackoverflow: users/4756628/joarleymoraes # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  twitter: 
+  stackoverflow:  # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: joarleymoraes
+disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-108215900-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://joarleymoraes.com
+url: http://ealexbarros.info
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
