--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ description: Put website description for your home page. (about 50 words or more
 keywords: some, relevant, keywords, for, usage, in metatags
 
 ##define this for disqus comment support
-#disqus: forumname
+disqus: forumname
 
 ##set this to enable google analytics
-#ga_id: analyticsID
-#ga_domain: analyticsDomain
+ga_id: UA-127442926-1
+ga_domain: analyticsDomain
 
 ##Some commonly used links
 links:
