--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline: Bulma Clean Theme
 email: your-email@domain.com
 description: >
   The demo site for Bulma Clean Theme, made for Jekyll and GitHub pages websites
-baseurl: "/bulma-clean-theme"
+baseurl: "/"
 url: "https://www.csrhymes.com"
 permalink: pretty
 #favicon: /path/to/favicon.png
@@ -29,8 +29,8 @@ plugins:
   - jekyll-seo-tag
   - kramdown
   - rouge
-  -git
-  -github-pages
+  - git
+  - github-pages
 
 exclude: 
   - Gemfile
