--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title: Alex Barros
-tagline: Bulma Clean Theme
+tagline: Página Pessoal #tagline vem  antes do título na ava do navegador
 email: eng.alexbarros@gmail.com
 description: >
   Site construído utilizando o tema Bulma Clean, feito em Jekyll e GitHub pages
