--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hamilton
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
-avatar: /logo.png
-email: ngzhio@gmail.com
+title: alexbarros.info
+description: Blog Pessoal
+author: Alex Barros
+avatar: /perfil.png
+email: eng.alexbarros@gmail.com
 
 plugins:
   - jekyll-seo-tag
@@ -30,14 +30,14 @@ exclude:
 # Jekyll SEO Tag (Optional)
 # =========================
 twitter:
-  username: ngzhio
+  username: ealexbarros
   card: summary
-logo: logo.png
+logo: perfil.png
 social:
-  name: Shangzhi Huang
+  name: Alex Barros
   links:
     - https://twitter.com/ngzhio
     - https://www.facebook.com/ngzhio
     - https://github.com/ngzhio
 google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
-lang: en
+lang: pt-BR
