--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,9 @@
 - title: Twitter
-  url: https://twitter.com/ngzhio
+  url: https://twitter.com/ealexbarros
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/ngzhio/jekyll-theme-hamilton
+  url: https://github.com/ealexbarros
   icon: fab fa-github
+- title: Instagram
+  url: https://instagram.com/ealexbarros
+  icon: fab fa-instagram
